--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/forms": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
+    "dexie": "^4.2.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "rxjs": "~7.8.0",
